--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body{
+    margin: 0px;
+    padding: 0px;
+}
+
 /* Header */
 .header{
     display: flex;
@@ -19,3 +24,46 @@
     gap: 16px;
 }
 /* Header */
+/* Main */
+.main{
+    display:flex;
+    background-color: #1F2937;
+    padding: 100px;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+.main h1{
+    font-size: 48px;
+    font-weight: 700;
+    color: #F9FAF8;
+}
+.main p{
+    font-size: 18px;
+    color: #E5E7EB;
+}
+.column{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+    height: 300px;
+}
+.imagen{
+    width: 300px;
+    height: 300px;
+}
+.button{
+    color: #E5E7EB;
+    background-color: #3882F6;
+    padding: 10px 30px;
+    color: #E5E7EB;
+    text-decoration: none;
+    border:none;
+    border-radius: 12.5%;
+    font-weight: 600;
+    margin: 30px
+}
+
+/* Main */
