--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0px;
     padding: 0px;
+    max-width: 100vw;
 }
 
 /* Header */
@@ -42,7 +43,7 @@ body{
     font-weight: 700;
     color: #F9FAF8;
 }
-.main p{
+.p{
     font-size: 18px;
     color: #E5E7EB;
 }
@@ -51,7 +52,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 500px;
+    width: 450px;
     height: 300px;
 }
 .imagen{
@@ -71,3 +72,47 @@ body{
 }
 
 /* Main */
+.h2{
+    font-size: 36px;
+    color:#1F2937;
+    font-weight: 800;
+    text-align: center;
+}
+/* Seccion */
+.seccion{
+    display:flex;
+    justify-content: center;
+    gap:30px;
+}
+.contenedor{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.contenedor img{
+    width: 150px;
+    height: 150px;
+    border-radius: 15px;
+    border: solid 2px;
+    border-color: #3882F6;
+}
+.seccion .div{
+    display:flex;
+    flex-flow: row nowrap;
+    gap:60px;
+}
+.contenedor p{
+    text-align: center;
+}
+.div{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+.contenedor{
+    width: 150px;
+    display:flex;
+    align-content: center;
+}
+/* Seccion */
