--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body{
     color: #E5E7EB;
     text-decoration: none;
     border:none;
-    border-radius: 12.5%;
+    border-radius: 15px;
     font-weight: 600;
     margin: 30px
 }
@@ -116,3 +116,23 @@ body{
     align-content: center;
 }
 /* Seccion */
+/* cita */
+.cita{
+    background-color: #E5E7EB;
+    display:flex;
+    padding: 150px;
+    justify-content: center;
+    align-items:center;
+}
+.cita i{
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 300;
+    width: 60%;
+    text-align: start;
+}
+i p{
+    text-align: end;
+    font-weight: 600;
+}
+/* cita */
